Added Google Glass example.

--- a/translation.html
+++ b/translation.html
@@ -45,7 +45,7 @@
 
 		<p>
 			How then, do research ideas <em>indirectly</em> lead to impact?
-			I would argue, based on both experience, and historical records of interface innovation, that there are three essential events that must occur (at least in a capitalist economy).
+			I would argue, based on both experience, and historical records of interface innovation, that there are three essential events that must occur (at least in a capitalist economy):
 		</p>
 
 		<ul>
@@ -62,7 +62,7 @@
 				These organizations might be startups, established companies, government entities, non-profits, open source communities, or any other form of community that wants to make something.
 			</li>
 			<li>
-				<strong>The interface must to win in the market</strong>.
+				<strong>The interface must win in the marketplace</strong>.
 				Even if an organization perfectly executes an interface at scale, and is fully committed to seeing it in the world, it only lives on if the timing is right for people to want it relative to other interfaces.
 				Consider Google's many poorly timed innnovations at scale: Google Glass, Google Wave, Google Buzz, Google Video; all of these were compelling new interface innovations, but none of them found a market, and so they didn't survive.
 		</ul>
@@ -101,7 +101,14 @@
 
 		<p>
 			Of course, just because someone sees an opportunity doesn't mean that there actually is one, or that it will still exist by the time a product is released.
-			Google Glass: research feasibility, Google took the risk, no market.
+			Consider, for example, Google Glass, which was based on decades of augmented reality HCI research, led by Georgia Tech researcher <a href="https://www.wired.com/story/google-glass-predicted-the-future/">Thad Starner</a>.
+			Starner eventually joined Google, where he was put in charge of designing and deploying Googlge Glass.
+			The vision was real, the product was real, and some people bought them (for $1,500).
+			The release was more of a beta in terms of functionality.
+			People weren't ready to constantly say "OK, Glass" every time they wanted it to do something.
+			And the public was <em>definitely<em> not ready for people wandering around with a recording device on their face.
+			The knickname "Glasshole" was coined, and suddenly, the cost of wearing the device wasn't just financial, but social.
+			Google left the market in 2015, largely because there <em>wasn't</em> a market to sell to (yet, or possibly ever).
 		</p>
 			
 		<p>
