Added citation to translational science article.

--- a/translation.html
+++ b/translation.html
@@ -45,7 +45,7 @@
 
 		<p>
 			How then, do research ideas <em>indirectly</em> lead to impact?
-			I would argue, based on both experience, and historical records of interface innovation, that there are three essential events that must occur (at least in a capitalist economy):
+			Based on both the experience of HCI researchers and practitioners attempting to translate research into practice (<a href="#colluso">Colusso et al. 2019</>) and historical records of interface innovation, there are three essential milestones that must occur (at least in a capitalist economy):
 		</p>
 
 		<ul>
@@ -155,6 +155,8 @@
 
 		<h2>Further reading</h2>
 
+		<p id="colusso">Lucas Colusso, Ridley Jones, Sean A. Munson, and Gary Hsieh (2019). A Translational Science Model for HCI. ACM SIGCHI Conference on Human Factors in Computing, to appear.</p>
+			
 		<script type="text/javascript">
 		
 			var _gaq = _gaq || [];
