--- a/translation.html
+++ b/translation.html
@@ -106,7 +106,7 @@
 			The vision was real, the product was real, and some people bought them (for $1,500).
 			The release was more of a beta in terms of functionality.
 			People weren't ready to constantly say "OK, Glass" every time they wanted it to do something.
-			And the public was <em>definitely<em> not ready for people wandering around with a recording device on their face.
+			And the public was <em>definitely</em> not ready for people wandering around with a recording device on their face.
 			The knickname "Glasshole" was coined, and suddenly, the cost of wearing the device wasn't just financial, but social.
 			Google left the market in 2015, largely because there <em>wasn't</em> a market to sell to (yet, or possibly ever).
 		</p>
