Added Siri story.

--- a/translation.html
+++ b/translation.html
@@ -102,17 +102,23 @@
 		<p>
 			Of course, just because someone sees an opportunity doesn't mean that there actually is one, or that it will still exist by the time a product is released.
 			Consider, for example, Google Glass, which was based on decades of augmented reality HCI research, led by Georgia Tech researcher <a href="https://www.wired.com/story/google-glass-predicted-the-future/">Thad Starner</a>.
-			Starner eventually joined Google, where he was put in charge of designing and deploying Googlge Glass.
+			Starner eventually joined Google, where he was put in charge of designing and deploying Google Glass.
 			The vision was real, the product was real, and some people bought them (for $1,500).
-			The release was more of a beta in terms of functionality.
-			People weren't ready to constantly say "OK, Glass" every time they wanted it to do something.
+			However, the release was more of a beta in terms of functionality.
+			And people weren't ready to constantly say "OK, Glass" every time they wanted it to do something.
 			And the public was <em>definitely</em> not ready for people wandering around with a recording device on their face.
-			The knickname "Glasshole" was coined, and suddenly, the cost of wearing the device wasn't just financial, but social.
+			The knickname "Glasshole" was coined to describe early adopters, and suddenly, the cost of wearing the device wasn't just financial, but social.
 			Google left the market in 2015, largely because there <em>wasn't</em> a market to sell to (yet, or possibly ever).
 		</p>
 			
 		<p>
-			Voice assistants: research feasibility, Apple took the risk, found a market.
+			Some interface ideas successfully make it through these various technology transfer barriers.
+			For example, after decades of speech recognition and speech synthesis research, DAPRA, the U.S. Department of Defense's Advanced Research Projects Agency, decided to invest in applied research to explore a vision of personal digital assistants.
+			It funded one big five project called <a href="https://en.wikipedia.org/wiki/CALO">CALO</a> ("Cognitive Assistant that Learns and Organizes"), engaging researchers across universities and research labs in the United States in creating a range of digital assistants.
+			The project led to many spinoff companies, including one called Siri, Inc., which was founded by three researchers at SRI, International, a research lab in Silicon Valley that was charged with being the lead integrator of the CALO project.
+			The <a href="https://www.sri.com/work/timeline-innovation/timeline.php?timeline=computing-digital#!&innovation=siri">Siri company</a> took many of the ideas that the CALO project demonstrated as feasible (speech recognition, high quality speech synthesis, mapping speech to commands), and attempted to build a service out them.
+			After a few rounds of venture capital in 2007, and a few years of product development, Apple acquired Siri, kept its name, and integrated it into the iPhone.
+			In this case, there was no existing market for digital voice assistants, but Apple was interested in making one, and did: Google, Microsoft, and Amazon quickly followed by creating their own digital voice assistants.
 		</p>
 		
 		<p>
