Added images to paragraphs.

--- a/translation.html
+++ b/translation.html
@@ -99,6 +99,8 @@
 			Whatever happens, it will be a market opportunity that pulls research innovations from the archives of digital libraries and researcher's heads into the product plans of an organization.
 		</p>
 
+		<img src="images/google-glass.jpg" class="img-responsive" alt="A close up of a person wearning a Google Glass device." />
+
 		<p>
 			Of course, just because someone sees an opportunity doesn't mean that there actually is one, or that it will still exist by the time a product is released.
 			Consider, for example, Google Glass, which was based on decades of augmented reality HCI research, led by Georgia Tech researcher <a href="https://www.wired.com/story/google-glass-predicted-the-future/">Thad Starner</a>.
@@ -110,7 +112,9 @@
 			The knickname "Glasshole" was coined to describe early adopters, and suddenly, the cost of wearing the device wasn't just financial, but social.
 			Google left the market in 2015, largely because there <em>wasn't</em> a market to sell to (yet, or possibly ever).
 		</p>
-			
+
+		<img src="images/siri.png" class="img-responsive" alt="The visual transcript of a person saying 'hello' to Siri, and Siri saying 'Hey' back." />
+
 		<p>
 			Some interface ideas successfully make it through these various technology transfer barriers.
 			For example, after decades of speech recognition and speech synthesis research, DAPRA, the U.S. Department of Defense's Advanced Research Projects Agency, decided to invest in applied research to explore a vision of personal digital assistants.
