--- a/translation.html
+++ b/translation.html
@@ -45,7 +45,7 @@
 
 		<p>
 			How then, do research ideas <em>indirectly</em> lead to impact?
-			Based on both the experience of HCI researchers and practitioners attempting to translate research into practice (<a href="#colluso">Colusso et al. 2019</>) and historical records of interface innovation, there are three essential milestones that must occur (at least in a capitalist economy):
+			Based on both the experience of HCI researchers and practitioners attempting to translate research into practice (<a href="#colluso">Colusso et al. 2019</a>) and historical records of interface innovation, there are three essential milestones that must occur (at least in a capitalist economy):
 		</p>
 
 		<ul>
