Centered and captioned images.

--- a/translation.html
+++ b/translation.html
@@ -71,7 +71,10 @@
 			Let's consider four examples of interface technologies where these three things either did or didn't happen, and that determined whether the idea made it to market.
 		</p>
 
-		<img src="images/rosie.jpg" class="img-responsive" alt="Rosie the robot maid, from The Jetsons, cleaning up sandwich debris." />
+		<center>
+			<img src="images/rosie.jpg" class="img-responsive" alt="Rosie the robot maid, from The Jetsons, cleaning up sandwich debris." />
+			<small>Rosie the robot maid, from The Jetsons, cleaning up sandwich debris.</small>
+		</center>
 
 		<p>
 			The first example we'll consider is what's typically known as <strong>strong AI</strong>.
@@ -84,7 +87,10 @@
 			Because strong AI is not feasible in the lab, there aren't likely to be any entreprenurs willing to take the risk of bringing something to market at scale.
 		</p>
 		
-		<img src="images/bci.jpg" class="img-responsive" alt="Two people with sensors on their heads attempting to operate a brain computer interface." />
+		<center>
+			<img src="images/bci.jpg" class="img-responsive" alt="Two people with sensors on their heads attempting to operate a brain computer interface." />
+			<small>Two people with sensors on their heads attempting to operate a brain computer interface.</small>
+		</center>
 
 		<p>
 			That example was fairly obvious of course; something that doesn't work clearly isn't going to be transferred into practice.
@@ -99,7 +105,10 @@
 			Whatever happens, it will be a market opportunity that pulls research innovations from the archives of digital libraries and researcher's heads into the product plans of an organization.
 		</p>
 
-		<img src="images/google-glass.jpg" class="img-responsive" alt="A close up of a person wearning a Google Glass device." />
+		<center>
+			<img src="images/google-glass.jpg" class="img-responsive" alt="A close up of a person wearning a Google Glass device." />
+			<small>A close up of a person wearning a Google Glass device.</small>
+		</center>
 
 		<p>
 			Of course, just because someone sees an opportunity doesn't mean that there actually is one, or that it will still exist by the time a product is released.
@@ -113,7 +122,10 @@
 			Google left the market in 2015, largely because there <em>wasn't</em> a market to sell to (yet, or possibly ever).
 		</p>
 
-		<img src="images/siri.png" class="img-responsive" alt="The visual transcript of a person saying 'hello' to Siri, and Siri saying 'Hey' back." />
+		<center>
+			<img src="images/siri.png" class="img-responsive" alt="The visual transcript of a person saying 'hello' to Siri, and Siri saying 'Hey' back." />
+			<small>The visual transcript of a person saying 'hello' to Siri, and Siri saying 'Hey' back.</small>
+		</center>
 
 		<p>
 			Some interface ideas successfully make it through these various technology transfer barriers.
