--- a/body.html
+++ b/body.html
@@ -31,10 +31,11 @@
 		<p>
 			In the <a href="hands.html">last chapter</a>, I introduced Weiser's vision of ubiquitous computing, and argued that part of fulfilling it was fully exploiting the versatility of our hands.
 			In this chapter, we explore all of the sources of human action other than hands and the range of ways this action has been channeled as input to computers.
+			As we shall see, many of the same gulfs of execution and evaluation arise with body-based input as does with hands.
 		</p>
 
 		<p>
-			If you think about what we use to act in the world, every overt action is driven by our <strong>muscles</strong>.
+			Part of this is that all body-based input is based in probabilistically recognizing the actions of muscles.
 			When we speak or make other sounds, we use the muscles in our throat, mouth, and face.
 			When we look with our eyes, we use muscles to shift our gaze, to blink, to squint, and keep our eyes closed.
 			We use our muscles to move and arrange our limbs.
@@ -83,6 +84,7 @@
 			Another useful muscle in our bodies are those that control our gaze.
 			Gaze is inherently social information that refers to inferences about where someone is looking based on the position of their pupils relative to targets in a space.
 			Gaze tracking technology usually involves machine vision techniques, using infrared illumination of pupils, then time series analysis and individual calibration to track pupil movements over time.
+			These can have useful applications in things like <a href="3D.html">virtual reality</a>.
 		</p>
 
 		<p>
@@ -100,11 +102,12 @@
 		</p>
 
 		<p>
-			Designing for gaze can require sophisticated knowledge of constraints on human-perception.
+			Unfortunately, designing for gaze can require sophisticated knowledge of constraints on human perception.
 			For example, one effort to design a hands-free, gaze-based drawing tool for people with motor disabilities ended up requiring the careful of commands to avoid frustrating error handling and disambiguation controls (<a href="http://dx.doi.org/10.1145/1054972.1054995">Hornof and Cavender 2005</a>).
+			Like other forms of recognition-based input, without significant attention to supporting recovery from recognition error, people will face challenges trying to perform the action they want efficiently and correctly.
 		</p>
 
-		<h2>Muscles</h2>
+		<h2>Limbs</h2>
 
 		<p>
 			Whereas our hands, voices, and eyes are all very specialized for social interaction, the other muscles in our limbs are more for movement.
@@ -123,11 +126,18 @@
 			Some focused on the breath, localizing where a person was blowing at a microphone installed on a laptop or computer screen (<a href="https://doi.org/10.1145/1294211.1294250">Patel and Abowd 2007</a>).
 			Others have defined entire gesture sets for tongue movement that can be detected non-invasively through wireless X-band Doppler movement detection (<a href="https://doi.org/10.1145/2702123.2702591">Goel et al. 2015</a>).
 		</p>
+		
+		<p>
+			While these explorations of limb-based interactions have all been demonstrated to be feasible to agree, as with many new interactions, they impose many gulfs of execution and evaluation that have not yet been explored.
+			How can users learn what a system is trying to recognize about limb movement?
+			How much will users be willing to train the machine learned classifiers used to recognize movement?
+			And when errors inevitably occur, how can we support people in recovering from error, but also improving classification in the future?
+		</p>
 
 		<h2>Body</h2>
 
 		<p>
-			Other applications have moved beyond specific muscles to the entire body.
+			Other applications have moved beyond specific muscles to the entire body and its skeletal structure.
 			For example, researchers have explored whole body gestures, allowing for hands-free interactions.
 			This technique uses the human body as an antenna for sensing, requiring no instrumentation to the environment, and only a little instrumentation of the user (<a href="http://dx.doi.org/10.1145/2207676.2208330">Cohn et al. 2012</a>):
 		</p>
@@ -142,14 +152,22 @@
 			Other techniques coordinate multiple parts of the body, such as gaze detection and foot movement (<a href="https://doi.org/10.1145/2818346.2820751">Klamka et al. 2015</a>).
 			Even more extreme ideas include entirely imaginary interfaces, in which users perform spatial gestures with no device and no visual feedback, relying on machine vision techniques to map movement to action (<a href="https://doi.org/10.1145/1866029.1866033">Gustafson et al. 2010</a>).
 		</p>
+		
+		<p>
+			Whole body interactions pose some unique gulfs of execution and evaluation.
+			For example, a false positive for a hand or limb-based gesture might mean unintentionally invoking a command.
+			We might not expect these to be too common, as we often use our limbs only when we want to communicate.
+			But we use our bodies all the time, moving, walking, and changing our posture.
+			If recognition algorithms aren't tuned to filter out the broad range of things we do with our body in every day life, the contexts in which body-based input might be used might be severely limited.
+		</p>
 
 		<hr/>
 
 		<p>
-			All of these techniques essentially aim to further Weiser's vision of ubiquitous computing.
-			However, they also further the feasibility of universal design by adding a greater range of viable modes of interaction.
-			All of this work, however, is very much at the level of feasibility assessments.
-			Few of these techniques have been explored as ways to build real applications, and so we know little about the affordances and feedback necessary to help people successfully use them to work and play.
+			This survey of body-based input techniques show a wide range of possible ways of providing input.
+			However, like any new interface ideas, there are many unresolved questions about how to train people to use them and how to support error recovery.
+			There are also many questions about the contexts in which such human-computer interaction might be socially acceptable.
+			The maturity of these ideas are therefore very much at the level of feasibility demonstrations, not full visions of application design and opeerating system support.
 		</p>
 
 		<center><p class="lead"><a href="2D.html">Next chapter: 2D visual output</a></p></center>
