Improved language about speech interfaces.

--- a/body.html
+++ b/body.html
@@ -64,18 +64,18 @@
 		</p>
 
 		<p>
-			Of course, voice is useful far beyond giving simple commands.
+			Voice is useful far beyond giving simple commands.
 			Researchers have explored it's use in multi-modal contexts in which a user both points and gives speech commands to control complex interfaces (<a href="http://dx.doi.org/10.1145/800250.807503">Bolt 1980</a>, <a href="https://doi.org/10.1145/2984511.2984588">Setler et al. 2016</a>).
 			Some have applied voice interactions to support more rapid data exploration by using natural language queries and "ambiguity widgets" to show ranges of possible queries (<a href="https://doi.org/10.1145/2807442.2807478">Gao et al. 2015</a>).
 			Others have used non-verbal voice humming to offer hands free interaction with creative tools, like drawing applications (<a href="http://dx.doi.org/10.1145/1296843.1296850">Harada et al. 2007</a>).
 		</p>
 
 		<p>
-			Of course, in all of these voice interactions, there are fundamental challenges to design around.
+			Of course, in all of these voice interactions, there are fundamental gulfs of execution and evaluation.
 			Early work on speech interfaces (<a href="http://dx.doi.org/10.1145/223904.223952">Yankelovich et al. 1995</a>) found that users expected conversational fluency in machines, that they struggled to overcome recognition errors, and that the design of commands for GUIs often did not translate well to speech interfaces.
 			They also found that speech itself poses cognitive demands on working memory to form correct commands, retain the state of the machine, and anticipate the behavior of the conversational agent.
-			These all further aggravate recognition errors.
-			All of these problems persist in modern speech interfaces, though to a lesser extent as speech recognition has improved.
+			These all further aggravated recognition errors.
+			All of these gulfs persist in modern speech interfaces, though to a lesser extent as speech recognition has improved.
 		</p>
 
 		<h2>Gaze</h2>
