Clarified link between reference and video.

--- a/2D.html
+++ b/2D.html
@@ -98,7 +98,7 @@
 		</p>
 
 		<p>
-			Some have experimented with even smaller displays, such as low-energy displays without batteries (<a href="https://doi.org/10.1145/2984511.2984513">Grosse-Puppendahl et al. 2016</a>) or tiny displays intended to view near eyes (<a href="https://doi.org/10.1145/2642918.2647361">Lyons et al. 2014</a>):
+			Some have experimented with even smaller displays, such as low-energy displays without batteries (<a href="https://doi.org/10.1145/2984511.2984513">Grosse-Puppendahl et al. 2016</a>) or tiny displays intended to view near eyes (<a href="https://doi.org/10.1145/2642918.2647361">Lyons et al. 2014</a>), as seen in the video below:
 		</p>
 
 		<p class="embed-responsive embed-responsive-16by9">
