--- a/2D.html
+++ b/2D.html
@@ -131,8 +131,8 @@
 
 		<p>
 			Where this gets interesting is in <em>sequences</em> of graphical operations that are overlaid on top of each other.
-			By composing shapes together, and rendering them in a particular order, we can get buttons with backgrounds, scroll bars with depth and texture, windows with drop shadows.
-			All of this graphical <strong>compositing</strong> is what allows us to create entire virtual worlds such as desktop interfaces or interactive 3D worlds.
+			<strongCompositing</strong> entails layering shapes atop each other in a particular order, so that we can get buttons with backgrounds, scroll bars with depth and texture, windows with drop shadows.
+			Compsiting is what allows us to create entire virtual worlds such as desktop interfaces or interactive 3D worlds.
 		</p>
 
 		<p>
