Fixed #44, addressing student feedback.

--- a/help.html
+++ b/help.html
@@ -86,9 +86,11 @@
 			For example, labeling a button appropriately can help a user learn what a button does or adding a header might help a learner understand the flow of interaction in an application.
 			Choosing good words and phrases is therefore key to learnability.
 			There's just one problem: research shows that there is rarely a best word or phrase.
-			This is called the <strong>vocabulary problem</strong> (<a href="http://dx.doi.org/10.1145/32206.32212">Furnas et al. 1987</a>).
+			For example, consider all of the words that essentially mean "send my data to the cloud": save, send, submit, upload, sync, etc.
+			Depending on the context and functionality, all of these might be reasonable descriptions.
+			The diversity of words suitable for describing software functionality is called the <strong>vocabulary problem</strong> (<a href="http://dx.doi.org/10.1145/32206.32212">Furnas et al. 1987</a>).
 			This is the empirical observation that there is extreme variability in the words that people choose to express a need, and so the single word that a designer chooses for a feature very rarely corresponds to the words that users choose.
-			In fact, for the tasks that Furmas studied, to get 90% of users to recognize a phrase as related to a goal to be accomplished in a user interface, systems must use nearly <em>20 unique phrases</em> to cover the range of expected descriptions of that goal.
+			In fact, for the tasks that Furnas studied, to get 90% of users to recognize a phrase as related to a goal to be accomplished in a user interface, systems must use nearly <em>20 unique phrases</em> to cover the range of expected descriptions of that goal.
 			This means that most naive text-based help search mechanisms will either have extremely low recall, or if many aliases have been provided, very low precision.
 			You can see the data here:
 		</p>
@@ -170,10 +172,6 @@
 			<center><em>Lemonaid's selection-based help (<a href="http://dx.doi.org/10.1145/2207676.2208620">Chilana et al. 2012</a>).</em></center>
 		</p>
 
-		<p>
-			I helped commercialize this system as a company called <a href="http://answerdash.com">AnswerDash</a>, which uses the technology to offer contextual help to websites experiencing high numbers of support requests.
-		</p>
-
 		<h2>Recommending help</h2>
 
 		<p>
@@ -253,7 +251,7 @@
 
 		<p>
 			I suspect that interfaces will always require help systems.
-			They are too artificial and change to much to ever eliminate the need for learning, and that means that something or someone will have to do the teaching.
+			They are too artificial and change too much to ever eliminate the need for learning, and that means that something or someone will have to do the teaching.
 			If anything, it's people that will adapt, becoming more accustomed to the constant learning necessary to use new interfaces.
 		</p>
 
